--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -1,14 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>AI Text Detector</title>
-    <!-- Tailwind CSS will be injected by the build process -->
-  </head>
-  <body class="antialiased text-gray-900">
-    <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root"></div>
-    <!-- The React app will mount on the #root element -->
-  </body>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>AI Text Detector</title>
+</head>
+<body class="antialiased text-gray-900 dark:bg-gray-900 dark:text-gray-100">
+  <noscript>You need to enable JavaScript to run this app.</noscript>
+  <div id="root"></div>
+</body>
 </html>
